# DCRMonteCarlo

./: Polylines.py  README.md  WoStSolver.py  __init__.py  forwardtest.py  pyproject.toml  testWostVariableCoefficients.py  testWostWithSource.py  test_variable_coefficients.py  utils.py
geometry/: Polylines.py  PolylinesSimple.py  __init__.py
solvers/: WoStSolver.py  __init__.py  utils.py
tests/: testGeophysicalScenario.py  testNotebook.ipynb  testWoStCorrectness.py  testWostVariableCoefficients.py  testWostWithSource.py  test_all_solvers_gradients.py  test_gradient_backprop.py  test_gradient_preserving_solver.py  test_jit_performance.py  test_minimal_gradient_fix.py  test_performance_benchmark.py  test_variable_coefficients.py
