[project]
name = "dcrmontecarlo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fenics>=2019.1.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "scipy>=1.16.0",
    "simpeg>=0.24.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
